ARROW-8238: [C++] Fix FieldPath type definition

FieldPath inherits from std::vector and causes link error.
Refactor by replacing inheritance with composition.