cpp/src/arrow/type.cc
@@ -600,12 +600,12 @@ std::string NullType::ToString() const { return name(); }
 // FieldRef
 
 size_t FieldPath::hash() const {
-  return internal::ComputeStringHash<0>(data(), size() * sizeof(int));
+  return internal::ComputeStringHash<0>(vector().data(), vector().size() * sizeof(int));
 }
 
 std::string FieldPath::ToString() const {
   std::string repr = "FieldPath(";
-  for (auto index : *this) {
+  for (auto index : this->vector()) {
     repr += std::to_string(index) + " ";
   }
   repr.resize(repr.size() - 1);
@@ -643,7 +643,7 @@ struct FieldPathGetImpl {
 
     ss << "indices=[ ";
     int depth = 0;
-    for (int i : *path) {
+    for (int i : path->vector()) {
       if (depth != out_of_range_depth) {
         ss << i << " ";
         continue;
@@ -666,13 +666,13 @@ struct FieldPathGetImpl {
   template <typename T, typename GetChildren>
   static Result<T> Get(const FieldPath* path, const std::vector<T>* children,
                        GetChildren&& get_children, int* out_of_range_depth) {
-    if (path->empty()) {
+    if (path->vector().empty()) {
       return Status::Invalid("empty indices cannot be traversed");
     }
 
     int depth = 0;
     const T* out;
-    for (int index : *path) {
+    for (int index : path->vector()) {
       if (index < 0 || static_cast<size_t>(index) >= children->size()) {
         *out_of_range_depth = depth;
         return nullptr;
@@ -766,7 +766,7 @@ Result<std::shared_ptr<ChunkedArray>> FieldPath::Get(const Table& table) const {
 }
 
 FieldRef::FieldRef(FieldPath indices) : impl_(std::move(indices)) {
-  DCHECK_GT(util::get<FieldPath>(impl_).size(), 0);
+  DCHECK_GT(util::get<FieldPath>(impl_).vector().size(), 0);
 }
 
 void FieldRef::Flatten(std::vector<FieldRef> children) {
@@ -973,8 +973,9 @@ std::vector<FieldPath> FieldRef::FindAll(const FieldVector& fields) const {
         auto maybe_field = match.Get(fields);
         DCHECK_OK(maybe_field.status());
 
-        prefix.resize(prefix.size() + match.size());
-        std::copy(match.begin(), match.end(), prefix.end() - match.size());
+        prefix.vector().resize(prefix.vector().size() + match.vector().size());
+        std::copy(match.vector().begin(), match.vector().end(),
+                  prefix.vector().end() - match.vector().size());
         prefixes.push_back(std::move(prefix));
         referents.push_back(std::move(maybe_field).ValueOrDie());
       }
